# libbpk

./: .gitignore  .vproject  CMakeLists.txt  COPYING  Dependencies.cmake  GitVersion.cmake  config.h.in  libbpk.pc.in  version.h.in
doc/: CMakeLists.txt  Doxyfile.in  UseDoxygen.cmake
src/: .gitignore  CMakeLists.txt  bpk-config.h.in  bpk.c  bpk.h  bpk_api.h  bpk_priv.h  crc32.c  crc32.h
src/compat/: endian.h  queue.h
tests/: CMakeLists.txt  test_crc.cpp  test_helpers.cpp  test_helpers.hpp  test_main.cpp  test_ops.cpp  test_zio.cpp
tools/: .gitignore  CMakeLists.txt  bpkfs.c  bpkfs.h  mkbpk.c  zio.c  zio.h
